tests/agl/rejections/type/wildcard_catch_subtype_field.agl
try
  ()
catch _ as e =>
  print e.raw
